BB-6636: IE 11 Front store> Category Page - pager is misaligned - fixed pager input in IE11

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/pagination-widget.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/pagination-widget.scss
@@ -63,6 +63,7 @@
     &__input {
       display: inline-block;
       width: 30px;
+      height: 30px;
       vertical-align: middle;
       padding: 0;
       border-radius: 0;
